# LeastSquares_Matching

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.py
core/include/: Correlation.h  matching.h  matrix.h  tools.h
core/src/: Correlation.cpp  matching.cpp  matrix.cpp  test.cpp  tools.cpp
python/: CMakeLists.txt  bindings.cpp  setup.py  ui.py
python/app/: ImageLabel.py  app.py  ui.py
python/package/: __init__.py
